# gitree

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: continuous_integration.yml  workflow.yml
gitree/: main.py
gitree/objects/: config.py  gitignore.py
gitree/services/: copy_service.py  drawing_service.py  export_service.py  flush_service.py  general_options_service.py  interactive_selection_service.py  items_selection_service.py  parser.py  parsing_service.py  resolve_items_service.py  zipping_service.py
gitree/services/items_selection/: directory_traverser.py
gitree/services/parsing/: __init__.py  fixing_service.py  parsing_service.py  rich_help_formatter.py  semantic_processing_service.py
gitree/utilities/: config_utility.py  logging_utility.py
services/: parser.py
tests/: TEST_COVERAGE.md  base_setup.py  test_general_options.py  test_io_options.py  test_listing_options.py  test_listing_override_options.py  test_positional_args.py  test_semantic_options.py
