[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Gitree"
version = "1.3.1"
description = "Gitree: git-aware project tree printing and zipping for docs and LLMs"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "Shahzaib Ahmad" }]
dependencies = ["pathspec>=0.11", "pyperclip>=1.5"]

[project.scripts]
gitree = "gitree.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["gitree*"]
